[gd_scene load_steps=16 format=4 uid="uid://bv546m8milc82"]

[ext_resource type="Script" path="res://Scenes/game.gd" id="1_44l1p"]
[ext_resource type="Texture2D" uid="uid://qdnhmn26s11o" path="res://Assets/select.png" id="2_denxk"]
[ext_resource type="Script" path="res://Scenes/tile_map.gd" id="3_ed4oi"]
[ext_resource type="PackedScene" uid="uid://bcbgtufmed15g" path="res://Scenes/Characters/Player/player.tscn" id="3_sqq7q"]
[ext_resource type="TileSet" uid="uid://iqf6vft5b5oj" path="res://Assets/super_tileset/super_tileset_godot4.tres" id="4_a3nxx"]
[ext_resource type="Script" path="res://Scenes/UI/ui.gd" id="6_bqsbj"]
[ext_resource type="PackedScene" uid="uid://cvvldda8khmm4" path="res://Scenes/Objects/Diamond/diamond.tscn" id="7_rrx0k"]
[ext_resource type="Texture2D" uid="uid://bb01yqudxei3q" path="res://Assets/Sprites/health.png" id="8_kujqx"]
[ext_resource type="FontFile" uid="uid://unpc42xsvs48" path="res://Assets/Fonts/tiny/tiny.ttf" id="9_o28ag"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hrol5"]
atlas = ExtResource("8_kujqx")
region = Rect2(63, 0, 21, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_rh0h7"]
atlas = ExtResource("8_kujqx")
region = Rect2(42, 0, 21, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_3285t"]
atlas = ExtResource("8_kujqx")
region = Rect2(21, 0, 21, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgx0q"]
atlas = ExtResource("8_kujqx")
region = Rect2(0, 0, 21, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_h3bno"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrol5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rh0h7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3285t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgx0q")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_yrgut"]
font = ExtResource("9_o28ag")
font_size = 4
font_color = Color(0.607843, 0.780392, 0, 1)

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_44l1p")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("6_bqsbj")

[node name="HealthBar" type="AnimatedSprite2D" parent="UI"]
sprite_frames = SubResource("SpriteFrames_h3bno")
centered = false

[node name="DiamondsCounter" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -3.0
offset_bottom = 5.0
grow_horizontal = 0
text = "0"
label_settings = SubResource("LabelSettings_yrgut")

[node name="Tools" type="Node" parent="."]

[node name="Select" type="Sprite2D" parent="Tools"]
unique_name_in_owner = true
texture = ExtResource("2_denxk")

[node name="TileMap" type="Node2D" parent="."]
z_index = 1
y_sort_enabled = true
script = ExtResource("3_ed4oi")

[node name="LayerFloor" type="TileMapLayer" parent="TileMap"]
tile_set = ExtResource("4_a3nxx")

[node name="LayerWall" type="TileMapLayer" parent="TileMap"]
z_index = 1
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAPAAEAAAACAAMAAAAPAAUAAAACAAMAAAAKAAcAAAALAAIAAAAJAAcAAAAFAAEAAAAIAAcAAAAKAAAAAAAHAAcAAAAKAAAAAAAGAAcAAAAGAAEAAAAFAAcAAAAJAAIAAAAEAAcAAAAJAAIAAAADAAcAAAAFAAEAAAACAAcAAAAKAAAAAAABAAcAAAAKAAAAAAAAAAcAAAAKAAAAAAD//wcAAAAGAAEAAAD+/wcAAAAJAAIAAAD+/wYAAAAJAAIAAAD+/wUAAAAJAAIAAAD+/wQAAAAJAAIAAAD+/wMAAAAJAAIAAAD+/wIAAAAJAAIAAAD+/wEAAAAJAAIAAAD+/wAAAAAJAAIAAAD+////AAAJAAIAAAD+//7/AAAJAAIAAAD///7/AAAJAAIAAAAAAP7/AAAGAAIAAAACAP7/AAAJAAMAAAADAP7/AAAJAAMAAAAEAP7/AAAJAAMAAAAFAP7/AAAFAAIAAAAGAP7/AAAJAAIAAAAGAP3/AAAJAAIAAAAHAP3/AAAJAAIAAAAIAP3/AAAJAAIAAAAJAP3/AAAJAAIAAAAJAP7/AAAJAAMAAAAKAP7/AAAFAAIAAAALAP7/AAAJAAIAAAAMAP7/AAAJAAIAAAANAP7/AAAJAAIAAAAOAP7/AAAGAAIAAAAPAP7/AAAJAAMAAAAFAP3/AAAJAAIAAAAEAP3/AAAJAAIAAAADAP3/AAAJAAIAAAACAP3/AAAJAAIAAAABAP3/AAAJAAIAAAAAAP3/AAAJAAIAAAAAAPz/AAAJAAIAAAD///z/AAAJAAIAAAD///v/AAAJAAIAAAD+//v/AAAFAAEAAAD9//v/AAAKAAAAAAD8//z/AAAIAAEAAAD7//3/AAAKAAAAAAD6//3/AAAIAAAAAAD6//7/AAAFAAEAAAD6////AAAJAAIAAAD7/wAAAAAJAAIAAAD6/wEAAAAJAAIAAAD6/wIAAAAJAAIAAAD6/wMAAAAJAAMAAAD7/wQAAAAIAAEAAAD7/wUAAAAIAAEAAAD7/wMAAAAFAAIAAAD7/wIAAAAJAAIAAAD7/wEAAAAJAAIAAAD8/wEAAAAJAAIAAAD5/wQAAAAAAAEAAAD5/wUAAAAAAAIAAAD6/wYAAAABAAMAAAD7/wcAAAAIAAEAAAD7/wgAAAAFAAEAAAD6/wgAAAAIAAAAAAD5/wkAAAAIAAAAAAD5/woAAAAIAAMAAAD6/woAAAAJAAMAAAD7/wsAAAAIAAMAAAD8/wsAAAAJAAMAAAD+/wsAAAAJAAMAAAD9/wsAAAAJAAMAAAD//wsAAAAFAAIAAAD//wwAAAAIAAMAAAAAAAwAAAAJAAMAAAABAAwAAAAFAAIAAAABAA0AAAAIAAMAAAACAA0AAAALAAMAAAACAAwAAAAGAAIAAAADAAwAAAALAAMAAAAEAA0AAAABAAMAAAAFAA0AAAACAAMAAAAGAA0AAAACAAMAAAAHAA0AAAADAAMAAAAIAAwAAAABAAMAAAAJAAwAAAACAAMAAAAKAAwAAAADAAMAAAALAAsAAAAAAAIAAAAMAAoAAAAJAAMAAAALAAoAAAAKAAMAAAAKAAoAAAAJAAMAAAAIAAoAAAAJAAMAAAAJAAoAAAAJAAMAAAAGAAoAAAAJAAMAAAAHAAoAAAAJAAMAAAAFAAoAAAAJAAMAAAAEAAsAAAALAAMAAAAEAAoAAAAGAAIAAAAEAAkAAAAJAAIAAAAFAAkAAAAJAAIAAAAGAAkAAAAJAAIAAAAJAAkAAAAJAAIAAAAIAAkAAAAJAAIAAAAHAAkAAAAJAAIAAAALAAkAAAAJAAIAAAAKAAkAAAAJAAIAAAAMAAkAAAAJAAIAAAANAAoAAAAJAAMAAAAOAAoAAAAJAAMAAAAPAAoAAAAJAAMAAAAQAAoAAAAJAAMAAAARAAoAAAAJAAMAAAARAAkAAAAKAAAAAAASAAoAAAAJAAMAAAAUAAsAAAAIAAMAAAATAAoAAAAJAAMAAAAWAAwAAAAIAAMAAAAVAAsAAAAJAAMAAAAYAAwAAAAJAAMAAAAXAAwAAAAJAAMAAAAZAAwAAAALAAMAAAAZAAsAAAAGAAIAAAAaAAsAAAALAAMAAAAaAAoAAAALAAIAAAAbAAgAAAALAAMAAAAaAAkAAAALAAIAAAAbAAcAAAALAAIAAAAbAAYAAAALAAAAAAAaAAUAAAALAAAAAAAZAAUAAAAKAAAAAAAYAAQAAAALAAIAAAAYAAMAAAALAAAAAAAXAAMAAAAGAAEAAAAXAAIAAAALAAIAAAAXAAEAAAALAAAAAAAWAAAAAAALAAIAAAAWAP//AAALAAIAAAAWAP7/AAALAAAAAAAVAP7/AAAGAAEAAAAVAP3/AAALAAAAAAATAP3/AAAKAAAAAAAUAP3/AAAKAAAAAAASAP3/AAAGAAEAAAASAPz/AAALAAAAAAARAPv/AAALAAIAAAARAPr/AAALAAAAAAAQAPr/AAAKAAAAAAAPAPn/AAALAAAAAAANAPn/AAAKAAAAAAAOAPn/AAAKAAAAAAAMAPn/AAAKAAAAAAALAPn/AAAIAAAAAAAKAPr/AAAKAAAAAAAJAPr/AAAKAAAAAAAIAPr/AAAKAAAAAAAHAPr/AAAKAAAAAAAGAPn/AAALAAAAAAAFAPn/AAAKAAAAAAAEAPn/AAAKAAAAAAAaAAgAAAAGAAIAAAAaAAcAAAAJAAIAAAAaAAYAAAAGAAEAAAAZAAoAAAAJAAIAAAAZAAkAAAAJAAIAAAAZAAgAAAAJAAIAAAAZAAcAAAAJAAIAAAAZAAYAAAAJAAIAAAAYAAsAAAAJAAIAAAAYAAoAAAAJAAIAAAAYAAkAAAAJAAIAAAAYAAgAAAAJAAIAAAAYAAcAAAAJAAIAAAAYAAYAAAAJAAIAAAAYAAUAAAAGAAEAAAAXAAsAAAAJAAIAAAAXAAoAAAAJAAIAAAAXAAkAAAAJAAIAAAAXAAgAAAAJAAIAAAAXAAcAAAAJAAIAAAAXAAYAAAAJAAIAAAAXAAUAAAAJAAIAAAAXAAQAAAAJAAIAAAAWAAsAAAAFAAIAAAAWAAoAAAAJAAIAAAAWAAkAAAAJAAIAAAAWAAgAAAAJAAIAAAAWAAcAAAAJAAIAAAAWAAYAAAAJAAIAAAAWAAUAAAAJAAIAAAAWAAQAAAAJAAIAAAAWAAMAAAAJAAIAAAAWAAIAAAAJAAIAAAAWAAEAAAAGAAEAAAAVAAoAAAAJAAIAAAAVAAkAAAAJAAIAAAAVAAgAAAAJAAIAAAAVAAcAAAAJAAIAAAAVAAYAAAAJAAIAAAAVAAUAAAAFAAEAAAAVAAQAAAAIAAEAAAAVAAMAAAAIAAEAAAAVAAIAAAAIAAEAAAAVAAEAAAAFAAIAAAAVAAAAAAAJAAIAAAAVAP//AAAJAAIAAAAUAAoAAAAFAAIAAAAUAAkAAAAJAAIAAAAUAAgAAAAJAAIAAAAUAAcAAAAJAAIAAAAUAAYAAAAFAAEAAAAUAAUAAAAIAAAAAAAUAAEAAAAFAAMAAAAUAAAAAAAIAAEAAAAUAP//AAAFAAIAAAAUAP7/AAAJAAIAAAATAAkAAAAFAAEAAAATAAgAAAAIAAEAAAATAAcAAAAIAAEAAAATAAYAAAAIAAAAAAATAAEAAAABAAMAAAATAP//AAAIAAMAAAATAP7/AAAFAAIAAAASAAkAAAAKAAAAAAASAAQAAAALAAMAAAASAAMAAAALAAAAAAASAP7/AAAJAAMAAAARAAQAAAAJAAMAAAARAAMAAAAKAAAAAAARAP7/AAAJAAMAAAARAP3/AAAJAAIAAAARAPz/AAAGAAEAAAAQAAkAAAAKAAAAAAAQAAYAAAAAAAIAAAAQAAUAAAADAAEAAAAQAAQAAAAEAAIAAAAQAAMAAAAIAAAAAAAQAAEAAAADAAMAAAAQAP7/AAAJAAMAAAAQAP3/AAAJAAIAAAAQAPz/AAAJAAIAAAAQAPv/AAAJAAIAAAAPAAkAAAAKAAAAAAAPAP3/AAAJAAIAAAAPAPz/AAAJAAIAAAAPAPv/AAAJAAIAAAAPAPr/AAAGAAEAAAAOAAkAAAAGAAEAAAAOAAgAAAALAAAAAAAOAAYAAAALAAMAAAAOAAUAAAAGAAAAAAAOAAEAAAAGAAMAAAAOAAAAAAALAAIAAAAOAP//AAALAAIAAAAOAP3/AAAJAAIAAAAOAPz/AAAJAAIAAAAOAPv/AAAJAAIAAAAOAPr/AAAJAAIAAAANAAkAAAAJAAIAAAANAAgAAAAKAAAAAAANAAYAAAAIAAMAAAANAAUAAAAFAAAAAAANAAEAAAAJAAMAAAANAAAAAAAJAAIAAAANAP//AAAJAAIAAAANAP3/AAAJAAIAAAANAPz/AAAJAAIAAAANAPv/AAAJAAIAAAANAPr/AAAJAAIAAAAMAAgAAAAKAAAAAAAMAAUAAAAGAAMAAAAMAAQAAAALAAAAAAAMAAEAAAAFAAMAAAAMAAAAAAAIAAEAAAAMAP//AAAFAAIAAAAMAP3/AAAJAAIAAAAMAPz/AAAJAAIAAAAMAPv/AAAJAAIAAAAMAPr/AAAJAAIAAAALAAgAAAAKAAAAAAALAAUAAAAJAAMAAAALAAQAAAAKAAAAAAALAAIAAAADAAIAAAALAAEAAAABAAAAAAALAP//AAAJAAMAAAALAP3/AAAJAAIAAAALAPz/AAAJAAIAAAALAPv/AAAJAAIAAAALAPr/AAAFAAEAAAAKAAgAAAAGAAEAAAAKAAYAAAAHAAEAAAAKAAUAAAAEAAIAAAAKAAQAAAAIAAAAAAAKAAIAAAABAAMAAAAKAP//AAAIAAMAAAAKAP3/AAAJAAIAAAAKAPz/AAAJAAIAAAAKAPv/AAAJAAIAAAAJAAgAAAAJAAIAAAAJAAYAAAAIAAAAAAAJAPz/AAAJAAIAAAAJAPv/AAAJAAIAAAAIAAgAAAAJAAIAAAAIAP//AAALAAMAAAAIAP7/AAAGAAIAAAAIAPz/AAAJAAIAAAAIAPv/AAAJAAIAAAAHAAgAAAAJAAIAAAAHAP//AAAJAAMAAAAHAP7/AAAJAAIAAAAHAPz/AAAJAAIAAAAHAPv/AAAJAAIAAAAGAAgAAAAJAAIAAAAGAAYAAAALAAAAAAAGAAMAAAAAAAMAAAAGAAEAAAAAAAIAAAAGAAAAAAAAAAEAAAAGAP//AAAKAAMAAAAGAPz/AAAJAAIAAAAGAPv/AAAJAAIAAAAGAPr/AAAGAAEAAAAFAAgAAAAJAAIAAAAFAAYAAAAKAAAAAAAFAP//AAAIAAMAAAAFAPz/AAAJAAIAAAAFAPv/AAAJAAIAAAAFAPr/AAAJAAIAAAAEAAgAAAAJAAIAAAAEAAYAAAAJAAAAAAAEAAUAAAAAAAAAAAAEAPz/AAAJAAIAAAAEAPv/AAAJAAIAAAAEAPr/AAAJAAIAAAADAAsAAAAGAAIAAAADAAoAAAAJAAIAAAADAAkAAAAJAAIAAAADAAgAAAAJAAIAAAADAAYAAAAIAAAAAAADAPz/AAAJAAIAAAADAPv/AAAJAAIAAAADAPr/AAAJAAIAAAADAPn/AAAKAAAAAAACAAsAAAAJAAIAAAACAAoAAAAJAAIAAAACAAkAAAAJAAIAAAACAAgAAAAJAAIAAAACAPz/AAAJAAIAAAACAPv/AAAJAAIAAAACAPr/AAAJAAIAAAACAPn/AAAKAAAAAAABAAsAAAAJAAIAAAABAAoAAAAJAAIAAAABAAkAAAAJAAIAAAABAAgAAAAJAAIAAAABAAMAAAADAAMAAAABAP7/AAAJAAMAAAABAPz/AAAJAAIAAAABAPv/AAAJAAIAAAABAPr/AAAJAAIAAAABAPn/AAAKAAAAAAAAAAsAAAAJAAIAAAAAAAoAAAAJAAIAAAAAAAkAAAAJAAIAAAAAAAgAAAAJAAIAAAAAAAMAAAAGAAMAAAAAAAIAAAALAAIAAAAAAAEAAAALAAIAAAAAAAAAAAALAAIAAAAAAP//AAALAAIAAAAAAPv/AAAJAAIAAAAAAPr/AAAJAAIAAAAAAPn/AAAKAAAAAAD//woAAAAJAAIAAAD//wkAAAAJAAIAAAD//wgAAAAJAAIAAAD//wYAAAALAAIAAAD//wUAAAALAAIAAAD//wQAAAALAAIAAAD//wMAAAAGAAIAAAD//wIAAAAJAAIAAAD//wEAAAAJAAIAAAD//wAAAAAJAAIAAAD/////AAAJAAIAAAD///3/AAAJAAIAAAD///r/AAAFAAEAAAD///n/AAAIAAAAAAD+/woAAAAJAAIAAAD+/wkAAAAJAAIAAAD+/wgAAAAJAAIAAAD+//3/AAAJAAIAAAD+//z/AAAJAAIAAAD+//r/AAAIAAAAAAD9/woAAAAJAAIAAAD9/wkAAAAJAAIAAAD9/wgAAAAJAAIAAAD9/wcAAAAJAAIAAAD9/wYAAAAJAAIAAAD9/wUAAAAJAAIAAAD9/wQAAAAJAAIAAAD9/wMAAAAJAAIAAAD9/wIAAAAJAAIAAAD9/wEAAAAJAAIAAAD9/wAAAAAJAAIAAAD9////AAAJAAIAAAD9//7/AAAJAAIAAAD9//3/AAAJAAIAAAD9//z/AAAJAAIAAAD9//n/AAAAAAMAAAD8/woAAAAJAAIAAAD8/wkAAAAJAAIAAAD8/wgAAAAJAAIAAAD8/wcAAAAJAAIAAAD8/wYAAAAJAAIAAAD8/wUAAAAJAAIAAAD8/wQAAAAJAAIAAAD8/wMAAAAJAAIAAAD8/wIAAAAJAAIAAAD8/wAAAAAJAAIAAAD8////AAAJAAIAAAD8//7/AAAJAAIAAAD8//3/AAAFAAEAAAD8//v/AAAIAAAAAAD7/woAAAAFAAIAAAD7/wkAAAAJAAIAAAD7/wYAAAAIAAIAAAD7////AAAJAAIAAAD7//7/AAAJAAIAAAD6/wkAAAAFAAEAAAD6/wAAAAAJAAIAAAD5/wMAAAAEAAIAAAD5/wIAAAAIAAEAAAD5/wEAAAAIAAEAAAD5/wAAAAAIAAEAAAD5////AAAIAAEAAAD5//7/AAAIAAAAAAA=")
tile_set = ExtResource("4_a3nxx")

[node name="Player" parent="." instance=ExtResource("3_sqq7q")]
position = Vector2(21, 22)

[node name="Diamonds" type="Node" parent="."]

[node name="Diamond" parent="Diamonds" instance=ExtResource("7_rrx0k")]
position = Vector2(38, 31)

[node name="Diamond2" parent="Diamonds" instance=ExtResource("7_rrx0k")]
position = Vector2(66, 26)

[node name="Diamond3" parent="Diamonds" instance=ExtResource("7_rrx0k")]
position = Vector2(60, 6)

[node name="Diamond4" parent="Diamonds" instance=ExtResource("7_rrx0k")]
position = Vector2(9, 44)

[node name="Diamond5" parent="Diamonds" instance=ExtResource("7_rrx0k")]
position = Vector2(64, 50)

[connection signal="hp_changed" from="Player" to="UI" method="_on_player_hp_changed"]
